--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,66 @@
 /*  your css code here. If applicable */
+body{
+	/* display: block;
+	justify-content: center;
+	align-items: center; */
+	/* width: 1000px */
+	font-family: arial;
+	width:90%;
+	margin:auto;
+}
+span{
+	color: #1f7afd;
+}
+.form-group{
+	margin: 20px;
+}
+h1{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+input{
+	padding: 5px;
+	display: flex;
+	justify-content:center;
+	align-items: center;
+	width: 100%;
+}
+div{
+	padding: 3px;
+}
+#submit{
+	margin: 5px;
+	padding: 15px;
+	color: white;
+	background: #1f7afd;
+	border: none;
+	border-radius: 5px;
+}
+button:hover{
+	cursor:pointer;
+}
+table{
+	margin-top:40px;
+	width:100%;
+	border-collapse:collapse;
+}
+tr.border{
+	border-bottom:2px solid black;
+}
+tr{
+	background-color:#F8F8F8;
+}
+th{
+	background-color:white;
+	width:27%;
+	text-align:left;
+}
+td,th{
+	padding:10px 5px;
+}
+.delete{
+	background-color:red;
+	border:none;
+	padding:2px;
+}
